force-app/main/default/objects/Timeline_Configuration__c/Timeline_Configuration__c.object-meta.xml
<CustomObject>
    <label>Timeline Configuration</label>
    <nameField>
        <displayFormat>TL-{00000}</displayFormat>
        <label>Timeline Configuration Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Timeline Configurations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>