force-app/main/default/objects/Timeline_Configuration__c/fields/Date_Filters__c.field-meta.xml
<CustomField>
    <fullName>Date_Filters__c</fullName>
    <description>Select the date range options for timeline date filter. If left empty, the date range will show all available options.</description>
    <inlineHelpText>Select the date range options for timeline date filter. If left empty, the date range will show all available options.</inlineHelpText>
    <label>Date Filters</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Date_Range_Options</valueSetName>
    </valueSet>
</CustomField>