force-app/main/default/objects/Timeline_Configuration__c/fields/Default_Date_Filter__c.field-meta.xml
<CustomField>
    <fullName>Default_Date_Filter__c</fullName>
    <description>Select the default date range options for the timeline date filter. If left empty, all time will be selected.</description>
    <inlineHelpText>Select the default date range options for the timeline date filter, If left empty, all time will be selected.</inlineHelpText>
    <label>Default Date Filter</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Date_Range_Options</valueSetName>
    </valueSet>
</CustomField>