force-app/main/default/objects/Timeline_Configuration__c/fields/Display_Relative_Dates__c.field-meta.xml
<CustomField>
    <fullName>Display_Relative_Dates__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>If unchecked dates for the &quot;Date field&quot; will be displayed in the date format current users&apos;s locale vs. relative dates like &quot;3 mins ago&quot; etc.&quot;</inlineHelpText>
    <label>Display Relative Dates</label>
    <type>Checkbox</type>
</CustomField>