force-app/main/default/objects/Timeline_Configuration__c/fields/External_Key__c.field-meta.xml
<CustomField>
    <fullName>External_Key__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>The external key of the record can be used to bind the configuration to the lightning page, but can also be used in automated pipelines to upsert data and relate child records to the configuration.</description>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <inlineHelpText>Use the External Key to set a fixed unique key for this record. This can be used to select the right configuration on the lightning page, but also when loading data into Salesforce.</inlineHelpText>
    <label>External Key</label>
    <length>80</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>