force-app/main/default/objects/Timeline_Configuration__c/fields/Object__c.field-meta.xml
<CustomField>
    <fullName>Object__c</fullName>
    <description>API Name of the object that this timeline configuration will be used.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>API Name of the object that this timeline configuration will be used.</inlineHelpText>
    <label>Object</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>